force-app/main/default/objects/Leilao__c/Leilao__c.object-meta.xml
<CustomObject>
    <label>Leilão</label>
    <nameField>
        <label>Nome de Leilão</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leilões</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>