force-app/main/default/objects/Leilao__c/fields/Data_Fim__c.field-meta.xml
<CustomField>
    <fullName>Data_Fim__c</fullName>
    <label>Data_Fim</label>
    <type>Date</type>
</CustomField>