force-app/main/default/objects/Leilao__c/fields/Incremento__c.field-meta.xml
<CustomField>
    <fullName>Incremento__c</fullName>
    <label>Incremento</label>
    <length>50</length>
    <type>Text</type>
</CustomField>