force-app/main/default/objects/Leilao__c/fields/Maior_Lance__c.field-meta.xml
<CustomField>
    <fullName>Maior_Lance__c</fullName>
    <label>Maior Lance</label>
    <length>50</length>
    <type>Text</type>
</CustomField>