force-app/main/default/objects/Leilao__c/fields/ValordoLance__c.field-meta.xml
<CustomField>
    <fullName>ValordoLance__c</fullName>
    <label>ValordoLance</label>
    <length>50</length>
    <type>Text</type>
</CustomField>